hphp/hack/test/typecheck/sealed/method_trait_03.php.exp
ERROR: File "method_trait_03.php", line 22, characters 19-21:
The method `foo` is not compatible with the overridden method (Typing[4341])
  File "method_trait_03.php", line 22, characters 19-21:
  You cannot override the method because it is sealed.
  File "method_trait_03.php", line 7, characters 19-21:
  Declaration is here
